--- a/index.html
+++ b/index.html
@@ -13,35 +13,40 @@
             background-blend-mode: multiply;
         }
         #fullpage .section:nth-child(1){
-            background-image: url(./img/1.jpg);
+            background-image: url(http://103.148.244.205:2020/img/1.jpg);
             background-color:#8000804d;
         }
         #fullpage .section:nth-child(2){
-            background-image: url(./img/6.png);
+            background-image: url(http://103.148.244.205:2020/img/6.png);
             background-color:#80000726;
         }
         #fullpage .section:nth-child(3){
-            background-image: url(./img/2.jpg);
+            background-image: url(http://103.148.244.205:2020/img/2.jpg);
             background-color:#8000660d;
         }
         #fullpage .section:nth-child(4){
-            background-image: url(./img/4.jpg);
+            background-image: url(http://103.148.244.205:2020/img/4.jpg);
 /*            background-color:#8000804d;*/
         }
         #fullpage .section:nth-child(5){
-            background-image: url(./img/5.jpg);
+            background-image: url(http://103.148.244.205:2020/img/5.jpg);
 /*            background-color:#8000804d;*/
         }
         #fullpage .section:nth-child(6){
-            background-image: url(./img/7.jpg);
+            background-image: url(http://103.148.244.205:2020/img/7.jpg);
             background-color:#80007717;
         }
         #fullpage .section:nth-child(7){
-            background-image: url(./img/8.jpg);
+            background-image: url(http://103.148.244.205:2020/img/6349.jpg);
 /*            background-color:#80007717;*/
         }
-        #headout{
-            //
+        #fullpage .section:nth-child(8){
+            background-image: url(http://103.148.244.205:2020/img/6726.jpg);
+/*            background-color:#80007717;*/
+        }
+        #fullpage .section:nth-child(9){
+            background-image: url(http://103.148.244.205:2020/img/8.jpg);
+/*            background-color:#80007717;*/
         }
         #head{
             width:12vh;
@@ -51,23 +56,39 @@
         }
         .telltxt{
             font-size: 8rem;
+            text-shadow:
+                -1px -1px 0 #6c0f97,
+/*                1px -1px 0 #6c0f97,*/
+/*                -1px 1px 0 #6c0f97,*/
+                1px 1px 0 #6c0f97;
         }
         .telltxt2{
-            font-size: 4rem;
-        }
-        #fullpage .section:nth-child(5) .telltxt{
-            font-size: 15rem;
-        }
-        #fullpage .section:nth-child(6) h2{
-            font-size: 3rem;
+            font-size: 1rem;
             margin: 20px;
 /*            text-shadow: 1px 2px 1px #000000;*/
+            color: #fff;
+            text-shadow:
+/*                -1px -1px 0 #ffffff,*/
+                1px 1px 0 #ffffff;
+        }
+        #fullpage .section:nth-child(5) .telltxt{
+            font-size: 10rem;
+        }
+        #fullpage .section:nth-child(n+6):nth-child(-n+8) h2{
+            font-size: 1.2rem;
+            margin: 20px;
             color: #fff;
             text-shadow:
                 -1px -1px 0 #6c0f97,
 /*                1px -1px 0 #6c0f97,*/
 /*                -1px 1px 0 #6c0f97,*/
                 1px 1px 0 #6c0f97;
+        }
+        .font-bold {
+            font-weight: bold;
+        }
+        .font-italic {
+            font-style: italic;
         }
     </style>
 </head>
@@ -78,15 +99,18 @@
     <div id="fullpage">
         <div id="playButton" class="section">
             <div  class="headout col-sm-3 mx-auto col-xl-2 offset-xl-5">
-                <img id="head" src="img/head.jpg" class="rounded-circle img-thumbnail rounded mx-auto d-block img-fluid" alt="">
+                <img id="head" src="http://103.148.244.205:2020/img/head.jpg" class="rounded-circle img-thumbnail rounded mx-auto d-block img-fluid" alt="">
                 <h1 class="headtext text-light text-center d-block mx-auto">点击进入</h1>
-                <audio id="audioPlayer" src="video/天气之子幻.mp3"></audio>
+                <audio id="audioPlayer" src="http://103.148.244.205:2020/video/天气之子幻.mp3"></audio>
             </div>
         </div>
         <div class="section"><h1 class="telltxt text-center text-light">祝</h1></div>
         <div class="section"><h1 class="telltxt text-center text-light">你</h1></div>
         <div class="section"><h1 class="telltxt text-center text-light">生日</h1></div>
-        <div class="section"><h1 class="telltxt text-center text-warning font-weight-bold">快乐!!!</h1></div>
+        <div class="section">
+            <h1 class="telltxt text-center text-warning font-weight-bold">快</h1>
+            <h1 class="telltxt text-center text-warning font-weight-bold">乐!!!</h1>
+        </div>
         <div class="section">
             <h2 class="text-center text-light">很高兴</h2>
             <h2 class="text-center text-light">见证了你的成长</h2>
@@ -96,20 +120,23 @@
             <h2 class="text-center text-info">100+小时的一星志愿者</h2>
             <h2 class="text-center text-info">党员同志</h2>
             <h2 class="text-center text-light">好多好多的身份荣誉</h2>
+        </div>
+        <div class="section">
             <h2 class="text-center text-light">不高傲，不急躁</h2>
             <h2 class="text-center text-light">脚踏实地地把想要的东西争取来</h2>
             <h2 class="text-center text-light">我很看好你</h2>
             <h2 class="text-center text-light">啊哈哈哈哈</h2>
             <h2 class="text-center text-light">恭喜你成功上岸了</h2>
-            <h2 class="text-center text-light">你以后还有创造更多的辉煌</h2>
-            <h2 class="text-center text-light">好好加油噢！！</h2>
-            <h2 class="text-center text-success">自是桃李树，何畏不成蹊！</h2>
+            <h2 class="text-center text-light">你以后还会创造更多的辉煌</h2>
+        </div>
+        <div class="section">
+            <h2 class="text-center font-bold">自是桃李树，何畏不成蹊！</h2>
             <h2 class="text-center text-warning">祝你生日快乐，不止生日！</h2>
             <h2 class="text-center text-warning">祝你心想事成，不止今日！    </h2>      
         </div>
         <div class="section">
-            <h1 class="telltxt2 text-center text-light">时人怎识凌云木</h1>
-            <h1 class="telltxt2 text-center text-light">直待凌云始道高~</h1>
+            <h1 class="telltxt2 text-center text-light font-italic">时人怎识凌云木</h1>
+            <h1 class="telltxt2 text-center text-light font-italic">直待凌云始道高~</h1>
         </div>
     </div>
     <script>
