字体样式修改

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.22/fullpage.min.css" integrity="sha512-i5IHYtHBVvbgT6M4ltVKNqF7fh/MTVfGh3ilW1gxxgmlMocsl8aYz28aF0Iph+ceUpun06UW9CpExog9qXqFKQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+        @font-face {
+            font-family: 'cute';
+            src: url('font/cute.TTF') format('truetype');
+        }
+        @font-face {
+            font-family: 'cool';
+            src: url('font/cool.ttf') format('truetype');
+        }
+        .cute {
+            font-family: 'cute', "宋体", sans-serif;
+        }
+        .cool{
+            font-family: 'cool', "宋体", sans-serif;
+        }
         #fullpage .section{
             background-repeat:no-repeat;
             background-size:cover;
@@ -79,7 +93,7 @@
             margin: 20px;
             color: #fff;
             text-shadow:
-                -1px -1px 0 #6c0f97,
+/*                -1px -1px 0 #6c0f97,*/
 /*                1px -1px 0 #6c0f97,*/
 /*                -1px 1px 0 #6c0f97,*/
                 1px 1px 0 #6c0f97;
@@ -104,12 +118,12 @@
                 <audio id="audioPlayer" src="http://103.148.244.205:2020/video/天气之子幻.mp3"></audio>
             </div>
         </div>
-        <div class="section"><h1 class="telltxt text-center text-light">祝</h1></div>
-        <div class="section"><h1 class="telltxt text-center text-light">你</h1></div>
-        <div class="section"><h1 class="telltxt text-center text-light">生日</h1></div>
+        <div class="section"><h1 class="telltxt text-center text-light cute">祝</h1></div>
+        <div class="section"><h1 class="telltxt text-center text-light cute">你</h1></div>
+        <div class="section"><h1 class="telltxt text-center text-light cute">生日</h1></div>
         <div class="section">
-            <h1 class="telltxt text-center text-warning font-weight-bold">快</h1>
-            <h1 class="telltxt text-center text-warning font-weight-bold">乐!!!</h1>
+            <h1 class="telltxt text-center text-warning font-weight-bold cute">快</h1>
+            <h1 class="telltxt text-center text-warning font-weight-bold cute">乐!!!</h1>
         </div>
         <div class="section">
             <h2 class="text-center text-light">很高兴</h2>
@@ -130,13 +144,13 @@
             <h2 class="text-center text-light">你以后还会创造更多的辉煌</h2>
         </div>
         <div class="section">
-            <h2 class="text-center font-bold">自是桃李树，何畏不成蹊！</h2>
+            <h2 class="text-center font-bold font-italic cool">自是桃李树，何畏不成蹊！</h2>
             <h2 class="text-center text-warning">祝你生日快乐，不止生日！</h2>
             <h2 class="text-center text-warning">祝你心想事成，不止今日！    </h2>      
         </div>
         <div class="section">
-            <h1 class="telltxt2 text-center text-light font-italic">时人怎识凌云木</h1>
-            <h1 class="telltxt2 text-center text-light font-italic">直待凌云始道高~</h1>
+            <h1 class="telltxt2 text-center text-light font-italic cool">时人怎识凌云木</h1>
+            <h1 class="telltxt2 text-center text-light font-italic cool">直待凌云始道高~</h1>
         </div>
     </div>
     <script>
