字体资源路径修改

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <style>
         @font-face {
             font-family: 'cute';
-            src: url('font/cute.TTF') format('truetype');
+            src: url('http://103.148.244.205:2020/font/cute.TTF') format('truetype');
         }
         @font-face {
             font-family: 'cool';
-            src: url('font/cool.ttf') format('truetype');
+            src: url('http://103.148.244.205:2020/font/cool.ttf') format('truetype');
         }
         .cute {
             font-family: 'cute', "宋体", sans-serif;
