--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
             <h2 class="text-center text-info">论文作者</h2>
             <h2 class="text-center text-info">100+小时的一星志愿者</h2>
             <h2 class="text-center text-info">党员同志</h2>
-            <h2 class="text-center text-light">好多好多的身份荣誉</h2>
+            <h2 class="text-center text-light">好多好多的荣誉</h2>
         </div>
         <div class="section">
             <h2 class="text-center text-light">不高傲，不急躁</h2>
-            <h2 class="text-center text-light">脚踏实地地把想要的东西争取来</h2>
+            <h2 class="text-center text-light">能脚踏实地地把想要的东西争取来</h2>
             <h2 class="text-center text-light">我很看好你</h2>
             <h2 class="text-center text-light">啊哈哈哈哈</h2>
             <h2 class="text-center text-light">恭喜你成功上岸了</h2>
