--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div  class="headout col-sm-3 mx-auto col-xl-2 offset-xl-5">
                 <img id="head" src="http://103.148.244.205:2020/img/head.jpg" class="rounded-circle img-thumbnail rounded mx-auto d-block img-fluid" alt="">
                 <h1 class="headtext text-light text-center d-block mx-auto">点击进入</h1>
-                <audio id="audioPlayer" src="http://103.148.244.205:2020/video/天气之子幻.mp3"></audio>
+                <audio id="audioPlayer" src="http://103.148.244.205:2020/video/烟花.mp3"></audio>
             </div>
         </div>
         <div class="section"><h1 class="telltxt text-center text-light cute">祝</h1></div>
