--- a/index.html
+++ b/index.html
@@ -133,18 +133,18 @@
             <h2 class="text-center text-info">论文作者</h2>
             <h2 class="text-center text-info">100+小时的一星志愿者</h2>
             <h2 class="text-center text-info">党员同志</h2>
-            <h2 class="text-center text-light">好多好多的荣誉</h2>
+            <h2 class="text-center text-light">好多好多的身份和荣誉</h2>
         </div>
         <div class="section">
             <h2 class="text-center text-light">不高傲，不急躁</h2>
-            <h2 class="text-center text-light">能脚踏实地地把想要的东西争取来</h2>
+            <h2 class="text-center text-light">能脚踏实地地把想要的东西拿到</h2>
             <h2 class="text-center text-light">我很看好你</h2>
             <h2 class="text-center text-light">啊哈哈哈哈</h2>
             <h2 class="text-center text-light">恭喜你成功上岸了</h2>
             <h2 class="text-center text-light">你以后还会创造更多的辉煌</h2>
         </div>
         <div class="section">
-            <h2 class="text-center font-bold font-italic cool">自是桃李树，何畏不成蹊！</h2>
+            <h2 class="text-center font-bold font-italic cool">自是桃李树，何畏不成蹊～</h2>
             <h2 class="text-center text-warning">祝你生日快乐，不止生日！</h2>
             <h2 class="text-center text-warning">祝你心想事成，不止今日！    </h2>      
         </div>
