文字样式修改

--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         </div>
         <div class="section">
             <h2 class="text-center font-bold font-italic cool">自是桃李树，何畏不成蹊～</h2>
-            <h2 class="text-center text-warning">祝你生日快乐，不止生日！</h2>
-            <h2 class="text-center text-warning">祝你心想事成，不止今日！    </h2>      
+            <h2 class="text-center text-warning">祝你<span class="text-danger font-bold ">生日快乐</span>，不止生日！</h2>
+            <h2 class="text-center text-warning">祝你<span class="text-danger font-bold ">心想事成</span>，不止今日！    </h2>      
         </div>
         <div class="section">
             <h1 class="telltxt2 text-center text-light font-italic cool">时人怎识凌云木</h1>
