--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <div class="section">
             <h2 class="text-center text-light">不高傲，不急躁</h2>
             <h2 class="text-center text-light">能脚踏实地地把想要的东西拿到</h2>
-            <h2 class="text-center text-light">你真的很棒～</h2>
+            <h2 class="text-center text-light">你真的很棒捏</h2>
             <h2 class="text-center text-light">啊哈哈哈哈</h2>
             <h2 class="text-center text-light">恭喜你成功上岸了</h2>
             <h2 class="text-center text-light">你以后还会创造更多的辉煌</h2>
