--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                 1px 1px 0 #6c0f97;
         }
         .telltxt2{
-            font-size: 1rem;
+            font-size: 1.1rem;
+            letter-spacing: 0.08em;
             margin: 20px;
 /*            text-shadow: 1px 2px 1px #000000;*/
             color: #fff;
